syntax = "proto3";

package rw.delasoft.qtmailguard.proto;

option java_package = "rw.delasoft.qtmailguard.proto";
option java_outer_classname = "EmailProto";
option java_multiple_files = true;

// SecureEmail represents an email message with integrity verification
// The body_hash and image_hash fields are used to verify data integrity
// using SHA-256 hashing algorithm
message SecureEmail {
    // Sender's display name
    string sender_name = 1;

    // Sender's email address
    string sender_email_address = 2;

    // Email subject line
    string subject = 3;

    // Email body content
    string body = 4;

    // Binary data of the attached image
    bytes attached_image = 5;

    // SHA-256 hash of the body field for integrity verification
    string body_hash = 6;

    // SHA-256 hash of the attached_image bytes for integrity verification
    string image_hash = 7;
}
